dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mockoon-service
spec:
  type: NodePort
  selector:
    app: mockoon
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30100
