dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: e2e-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
    - http:
        paths:
          - path: /dynamic
            backend:
              serviceName: mockoon-service
              servicePort: 3000
